Добавил soft-delete комментария, содержащего ветку обсуждений
